Added basic offers logic and crud